--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,12 +2,23 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}AddressBook{% endblock %}</title>
+
+        <link href="{{ asset('bootstrap-3.3.5-dist/css/bootstrap.min.css') }}" rel="stylesheet">
+        <link href="{{ asset('bootstrap-3.3.5-dist/css/bootstrap-theme.min.css') }}" rel="stylesheet">
+        <link href="{{ asset('select2-3.5.4/select2.css') }}" rel="stylesheet">
+        <link href="{{ asset('select2-3.5.4/select2-bootstrap.css') }}" rel="stylesheet">
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
         {% block body %}{% endblock %}
+
+        <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+        <script src="{{ path('fos_js_routing_js', {'callback': 'fos.Router.setData'}) }}"></script>
+        <script src="{{ asset('jquery-1.11.3/jquery-1.11.3.min.js') }}"></script>
+        <script src="{{ asset('bootstrap-3.3.5-dist/js/bootstrap.min.js') }}"></script>
+        <script src="{{ asset('select2-3.5.4/select2.min.js') }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
