--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,6 +6,14 @@
 
         <link href="{{ asset('bootstrap-3.3.5-dist/css/bootstrap.min.css') }}" rel="stylesheet">
         <link href="{{ asset('bootstrap-3.3.5-dist/css/bootstrap-theme.min.css') }}" rel="stylesheet">
+
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+
         <link href="{{ asset('select2-3.5.4/select2.css') }}" rel="stylesheet">
         <link href="{{ asset('select2-3.5.4/select2-bootstrap.css') }}" rel="stylesheet">
         {% block stylesheets %}{% endblock %}
