--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -19,7 +19,7 @@
 
                     <div class="form-group">
                         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"/>
-                        <input type="hidden" name="_target_path" value="/"/>
+                        <input type="hidden" name="_target_path" value="/admin"/>
                         <button type="submit" class="btn btn-lg btn-primary btn-block">Bejelentkezés</button>
                     </div>
 
