--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -27,6 +27,8 @@
         <script src="{{ asset('jquery-1.11.3/jquery-1.11.3.min.js') }}"></script>
         <script src="{{ asset('bootstrap-3.3.5-dist/js/bootstrap.min.js') }}"></script>
         <script src="{{ asset('select2-3.5.4/select2.min.js') }}"></script>
+        <script src="{{ asset('js/date.format.js') }}"></script>
+        <script src="{{ asset('js/scripts.js') }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
