--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -1,9 +1,63 @@
 {% extends 'base.html.twig' %}
 
+{% block javascripts %}
+    <script src="{{ asset('js/scripts.js') }}"></script>
+{% endblock %}
+
 {% block body %}
     <div class="container">
-        <div class="row">
-            Home
+        <h1 class="pull-left">Címlista bejegyzések</h1>
+
+        <h1 class="pull-right">
+            <a href="{{ path('admin.index') }}" class="btn btn-default btn-xs">
+                <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> Admin belépés
+            </a>
+        </h1>
+    </div>
+
+    <div class="container">
+        <div class="col-md-12">
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th>Név</th>
+                    <th>Cím</th>
+                    <th>E-mail cím</th>
+                    <th>Telefon</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for entry in entries %}
+                    <tr data-id="{{ entry.id }}">
+                        <td>{{ entry.name }}</td>
+                        <td>{{ entry.addresses.last.address }}</td>
+                        <td>{{ entry.emails.last.email }}</td>
+                        <td>{{ entry.phones.last.phone }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="navigation">
+            {{ knp_pagination_render(entries) }}
+        </div>
+    </div>
+
+    <div class="modal fade" id="details-modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Bezárás"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Részletek</h4>
+                </div>
+                <div class="modal-body"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Bezárás</button>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
