--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -21,6 +21,7 @@
                         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"/>
                         <input type="hidden" name="_target_path" value="/admin"/>
                         <button type="submit" class="btn btn-lg btn-primary btn-block">Bejelentkezés</button>
+                        <a href="{{ path('home.index') }}" class="btn btn-lg btn-default btn-block">Főoldal</a>
                     </div>
 
                     {% if error %}
