--- a/app/Resources/views/admin/entries/index.html.twig
+++ b/app/Resources/views/admin/entries/index.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
     <div class="container">
-        <h1 class="pull-left">Címlista bejegyzések</h1>
+        <h1 class="pull-left">ADMIN Címlista bejegyzések</h1>
 
         <h1 class="pull-right">
             <a href="{{ path('security.logout') }}" class="btn btn-default btn-xs">
