--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -28,6 +28,7 @@
         <script src="{{ asset('bootstrap-3.3.5-dist/js/bootstrap.min.js') }}"></script>
         <script src="{{ asset('select2-3.5.4/select2.min.js') }}"></script>
         <script src="{{ asset('js/date.format.js') }}"></script>
+        <script src="{{ asset('js/parseuri.js') }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
